src/test/ui/nll/issue-50716.stderr
error: lifetime may not live long enough
  --> $DIR/issue-50716.rs:14:14
   |
LL | fn foo<'a, T: 'static>(s: Box<<&'a T as A>::X>)
   |        -- lifetime `'a` defined here
...
LL |     let _x = *s;
   |              ^^ proving this value is `Sized` requires that `'a` must outlive `'static`

error: aborting due to previous error

